--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pylint playwright pytest
+          playwright install
 
       - name: Run isort
         run: |
