--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -24,8 +24,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pylint playwright pytest
-          playwright install --with-deps
-
+          
+      - name: Install Playwright Browsers
+        run: playwright install
+      
       - name: Run isort
         run: |
           isort --check --diff task_1/
@@ -57,6 +59,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest playwright
+          
+      - name: Install Playwright Browsers
+        run: playwright install
 
       - name: Run tests
         run: pytest
